--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -17,6 +17,7 @@
 @import 'components/button-decorative';
 @import 'components/overlay';
 
+@import 'helpers/link';
 @import 'helpers/size';
 @import 'helpers/type';
 @import 'helpers/transition';
