--- a/src/assets/scss/custom/_variables.scss
+++ b/src/assets/scss/custom/_variables.scss
@@ -47,7 +47,7 @@ $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 $gray:    #aaa8a5 !default;
-$gray-dark: #1d1d1d !default;
+$gray-dark: #141414 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -75,7 +75,7 @@ $secondary:     $gray-600 !default;
 $success:     #32cc38 !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
-$danger:      #fb5950 !default;
+$danger:      #fb5050 !default;
 $light:       #faf1e2 !default;
 $dark:        #080808 !default;
 $black:       #000000 !default;
@@ -562,6 +562,7 @@ $transition-collapse-width:   width .35s ease !default;
 // scss-docs-start aspect-ratios
 $aspect-ratios: (
   "1x1": 100%,
+  "2x3": calc(3 / 2 * 100%),
   "4x3": calc(3 / 4 * 100%),
   "16x9": calc(9 / 16 * 100%),
   "21x9": calc(9 / 21 * 100%)
